@@ -30,6 +30,7 @@ import javax.swing.*;
 import java.awt.event.*;
 import java.awt.*;
 import org.gjt.sp.jedit.*;
+import org.gjt.sp.util.EnhancedTreeCellRenderer;
 //}}}
 
 /**
@@ -402,7 +403,7 @@ public class FilesChangedDialog extends EnhancedDialog
 	} //}}}
 
 	//{{{ Renderer class
-	static class Renderer extends DefaultTreeCellRenderer
+	static class Renderer extends EnhancedTreeCellRenderer
 	{
 		Renderer()
 		{
@@ -412,13 +413,17 @@ public class FilesChangedDialog extends EnhancedDialog
 			groupFont = entryFont.deriveFont(Font.BOLD);
 		}
 
-		public Component getTreeCellRendererComponent(JTree tree,
+		@Override
+		protected TreeCellRenderer newInstance()
+		{
+			return new Renderer();
+		}
+
+		@Override
+		protected void configureTreeCellRendererComponent(JTree tree,
 			Object value, boolean selected, boolean expanded,
 			boolean leaf, int row, boolean hasFocus)
 		{
-			super.getTreeCellRendererComponent(tree,value,
-				selected,expanded,leaf,row,hasFocus);
-
 			DefaultMutableTreeNode node = (DefaultMutableTreeNode)value;
 
 			if(node.getParent() == tree.getModel().getRoot())
@@ -427,8 +432,6 @@ public class FilesChangedDialog extends EnhancedDialog
 				setFont(entryFont);
 
 			setIcon(null);
-
-			return this;
 		}
 
 		private Font entryFont;
